<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test</string>
    <string name="offers">عروض</string>
    <string name="contactUs">اتصل بنا</string>
    <string name="country">الدوله</string>
    <string name="faq">الاسئله الشائعه</string>
    <string name="language">اللغه</string>
    <string name="location">المواقع</string>
    <string name="openAccount">فتح حساب جديد</string>
    <string name="products">المنتجات</string>
    <string name="registerUser">اشتراك جديد</string>
    <string name="tools">ادوات</string>

    <string name="permission_required">Please grant the permission to use the microphone</string>
    <string name="start_service">START SERVICE</string>
    <string name="stop_service">STOP SERVICE</string>

    <string name="voice_recognizer_is_active">Voice Recognizer is active...</string>
    <string name="ask_permission">Please allow Speech to always run in the background,else our services can\'t be accessed when you are in distress</string>
    <string name="allow">ALLOW</string>
    <string name="enable_autostart">Enable AutoStart</string>
    <string name="my_service_name">com.sac.speechdemo.MyService</string>

    <string name="packageName">com.zak.testapp</string>

    <string name="countryActivity">com.zak.testapp.CountryActivity</string>
    <string name="offersActivity">com.zak.testapp.OffersActivity</string>
    <string name="contactUsActivity">com.zak.testapp.ContactUsActivity</string>
    <string name="faqActivity">com.zak.testapp.FaqActivity</string>
    <string name="languageActivity">com.zak.testapp.LanguageActivity</string>
    <string name="locationActivity">com.zak.testapp.LocationActivity</string>
    <string name="openAccountActivity">com.zak.testapp.OpenAccountActivity</string>
    <string name="productsActivity">com.zak.testapp.ProductsActivity</string>
    <string name="registerUserActivity">com.zak.testapp.RegisterUserActivity</string>
    <string name="toolsActivity">com.zak.testapp.ToolsActivity</string>

</resources>